Arreglando problemas de resolucion en el diseño de vacunas

--- a/src/app/private/pages/vacunas-detalle/vacunas-detalle.page.scss
+++ b/src/app/private/pages/vacunas-detalle/vacunas-detalle.page.scss
@@ -49,12 +49,12 @@ ion-button{
 
 
 .close{
-    margin-left: -70px;
+    margin-left: -100px;
     margin-top: 250px;
 }
 
 .edit{
-    margin-left: -180px;
+    margin-left: -220px;
     margin-top: 250px;
 }
 
@@ -68,6 +68,7 @@ ion-button{
 .label-fecha{
     position: relative;
     top: 80px;
-    left: 15px;
+    left: -20px;
+    font-size: 16px;
 }
 
