--- a/src/app/private/pages/vacunas/components/card-vacunas/card-vacunas.component.scss
+++ b/src/app/private/pages/vacunas/components/card-vacunas/card-vacunas.component.scss
@@ -26,46 +26,17 @@ div{
     left: 25px;
 }
 
-.label-vacuna-1{
+.label-vacuna{
     position: relative;
     left: 160px;
     top: -60px;
     font-size: 40px;
 }
 
-.label-fecha-1{
-    position: relative;
-    left: 50px;
-    top: -25px;
-    font-size: 20px;
-}
-
-.label-vacuna-2{
-    position: relative;
-    left: 150px;
-    top: -50px;
-    font-size: 20px;
-    font-size: 40px;
-}
-
-.label-fecha-2{
-    font-size: 20px;
-    position: relative;
-    left: 5px;
-    top: -10px;
-}
-
-.label-vacuna-3{
-    position: relative;
-    left: 150px;
-    top: -50px;
-    font-size: 20px;
-    font-size: 40px;
-}
-
-.label-fecha-3{
-    font-size: 20px;
+.label-fecha{
     position: relative;
     left: 150px;
     top: -60px;
+    font-size: 15px;
 }
+
