Crud vacuna todo listo funcionando con diseño corregido y con servicios listos

--- a/src/app/private/pages/vacunas-detalle/vacunas-detalle.page.html
+++ b/src/app/private/pages/vacunas-detalle/vacunas-detalle.page.html
@@ -4,7 +4,7 @@
 <ion-content [fullscreen]="true">
   <div class="container-div">
     <ion-img class="icon-img" src="../../../../assets/img/medicaments.png"></ion-img>
-    <ion-label class="label-vacuna" color="tertiary">{{VacunaDetalle?.vacunas.nombre}}</ion-label>
+    <ion-label class="label-vacuna" color="tertiary">{{VacunaDetalle?.vacunas.nombre}}</ion-label> <br>
     <ion-badge class="label-fecha" color="success">Fecha de Aplicación: {{VacunaDetalle?.vacunas.fecha}}</ion-badge>
 
     <ion-fab class="edit">
