--- a/src/app/private/pages/examenes-medicos/components/card-examenes-medicos/card-examenes-medicos.component.scss
+++ b/src/app/private/pages/examenes-medicos/components/card-examenes-medicos/card-examenes-medicos.component.scss
@@ -38,15 +38,16 @@ div {
   left: 25px;
 }
 
-.label-estado-3 {
+.label-nombre {
   position: relative;
   left: 130px;
   top: -45px;
+  font-size: 30px;
 }
 
-.label-cita {
+.label-fecha {
   position: relative;
   left: 130px;
-  top: -50px;
-  font-size: 23px;
+  top: -30px;
+  font-size: 15px;
 }
