--- a/src/app/private/pages/examenes-medicos-detalle/examenes-medicos-detalle.page.scss
+++ b/src/app/private/pages/examenes-medicos-detalle/examenes-medicos-detalle.page.scss
@@ -31,12 +31,11 @@ h2 {
     transform: translate(-50%, -50%);
 }
 
-.datos {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    align-items: center;
+.label-fecha{
+    position: relative;
+    margin-top: 70px;
+    left: 65px;
+    font-size: 20px;
 }
 
 .acciones {
@@ -47,15 +46,26 @@ h2 {
 }
 
 .close {
-    margin-left: 130px;
-    margin-top: 200px;
+    margin-left: 80px;
+    margin-top: 100px;
 }
 
 .edit {
-    margin-left: 30px;
-    margin-top: 200px;
+    margin-left: -20px;
+    margin-top: 100px;
 }
 
-ion-badge {
-    margin-left: 30px;
+.text-resultado{
+    position: relative;
+    left: 120px;
+    top: 25px;
+    font-size: 25px;
+}
+
+.text-resultado_badge{
+    font-size: 20px;
+}
+
+span{
+    margin-left: -15px;
 }
