idComentario arreglado ya con los datos del servicio y ya no estatico todo funcionando

--- a/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
+++ b/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
@@ -24,6 +24,8 @@
         </ion-fab-button>
     </ion-fab>
 
+    <ion-button color="dark" [routerLink]="['/resenia-crear',id]">Crear Reseña</ion-button>
+
 </div>
 
 
