Se realizo los crud de observacion y antecedentes

--- a/src/app/private/pages/antedecentes-medicos/components/card-antecedentes-medicos/card-antecedentes-medicos.component.html
+++ b/src/app/private/pages/antedecentes-medicos/components/card-antecedentes-medicos/card-antecedentes-medicos.component.html
@@ -1,4 +1,4 @@
-<div [routerLink]="['/antedecentes-medicos-detalle']" *ngFor="let antecedente of antecedente">
+<div [routerLink]="['/antedecentes-medicos-detalle/'+antecedente.id]" *ngFor="let antecedente of antecedente">
   <ion-img class="icon-img" src="../../../../assets/img/antecedentes.png"></ion-img>
   <ion-label class="label-cita" color="tertiary">{{antecedente.alergias}}
       <nav></nav>
