--- a/src/app/private/pages/citas-medicas/components/card-citas/card-citas.component.html
+++ b/src/app/private/pages/citas-medicas/components/card-citas/card-citas.component.html
@@ -5,3 +5,5 @@
 </div>
 
 <button [routerLink]="['/observacion-create/'+cita.id]" routerLinkActive="router-link-active" >Observacion</button>
+<br>
+<button [routerLink]="['/recetas-crear/'+cita.id]" routerLinkActive="router-link-active" >Añadir Receta</button>
