--- a/src/app/private/pages/titulos/components/cards-titulos/cards-titulos.component.html
+++ b/src/app/private/pages/titulos/components/cards-titulos/cards-titulos.component.html
@@ -1,5 +1,5 @@
-<div [routerLink]="['/titulos-detalle']">
+<div [routerLink]="['/titulos-detalle']" *ngFor="let titulo of title">
     <ion-img class="icon-img" src="../../../../../../assets/img/titulo.png"></ion-img>
-    <ion-label class="label-cita" color="tertiary">Medicina General</ion-label>
-    <ion-badge class="label-estado label-estado-1" color="warning">20/03/2009</ion-badge>
+    <ion-label class="label-cita" color="tertiary">{{titulo.nombre}}</ion-label>
+    <ion-badge class="label-estado label-estado-1" color="warning">{{titulo.fecha}}</ion-badge>
 </div>
