Se realizo el crud de titulo

--- a/src/app/private/pages/titulos-detalle/titulos-detalle.page.html
+++ b/src/app/private/pages/titulos-detalle/titulos-detalle.page.html
@@ -10,7 +10,7 @@
        <p>Titulo</p>
        <div class="icon-content">
         <ion-icon (click)="edit()" class="icon-warp" name="create-outline"></ion-icon>
-        <ion-icon class="icon-warp" name="trash-outline"></ion-icon>
+        <ion-icon (click)="Delete()" class="icon-warp" name="trash-outline"></ion-icon>
        </div>
     </ion-card-header>
   </ion-card>
