--- a/src/app/public/pages/landing/landing.page.scss
+++ b/src/app/public/pages/landing/landing.page.scss
@@ -1,23 +1,39 @@
-.logo {
-  width: 50px;
-  height: 50px;
+.container{
+  background-color: #2ECC71;
+  height: 100%;
+  width: 100%;
+  background-image: url("https://res.cloudinary.com/duhm7ousd/image/upload/v1692244139/Imagenes-MediBook/img/fondo_qgl2wy.jpg");
+  background-size: cover;
+  background-position: start;
+  background-repeat: no-repeat;
+}
+
+ion-img {
+  width: 100%;
+  height: 100%;
+}
+
+ion-card {
+  --ion-background-color: transparent;
+  box-shadow: none;
+  height: 25%;
 }
 
 .subtitle {
-  margin-left: 30px;
-  margin-right: 30px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  margin: 40px 20px;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 700;
   text-align: center;
+  color: #767676;
 }
 
 .btn {
   text-align: center;
 }
 
-ion-card {
-  --ion-background-color: transparent;
-  box-shadow: none;
+ion-button{
+  font-weight: 600;
 }
 
 ion-card-title {
@@ -26,5 +42,116 @@ ion-card-title {
 }
 
 
+/* animacion de letras MediBook */
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+
+.texto-animado {
+  display: flex;
+  text-align:center;
+  justify-content: center;
+  align-items: center;
+  /*background-color: #0056b3; */
+  font-weight:600;
+  font-size:32px;
+  overflow:hidden;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0,0,0);
+}
+h1{
+  padding: 0;
+  margin: 0;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+.primero{
+  font-family: 'Righteous', cursive;;
+  color: #F39C12;
+  font-size: 50pt;
+  font-weight: bold;
+}
+
+.segundo{
+  font-family: 'Righteous', cursive;
+  color: #2ECC71;
+  font-size: 50pt;
+  font-weight: bold;
+}
+
+.primer-txt {
+  display:inline-block;
+  overflow:hidden;
+  height: 90px;
+}
+.txt{
+  padding: 0px;
+  margin: 0px;
+}
+
+.primer-txt:first-of-type {    /* For increasing performance
+                       ID/Class should've been used.
+                       For a small demo
+                       it's okaish for now */
+  animation: showup 5s infinite;
+}
+
+.primer-txt:last-of-type {
+  width:0px;
+  animation: reveal 5s infinite;
+}
+
+.primer-txt:last-of-type h1 {
+  margin-left:10px;
+  animation: slidein 5s infinite;
+}
+
+@keyframes showup {
+    0% {opacity:0;}
+    20% {opacity:1;}
+    80% {opacity:1;}
+    100% {opacity:0;}
+}
+
+@keyframes slidein {
+    0% { margin-left:-800px; }
+    20% { margin-left:-800px; }
+    35% { margin-left:0px; }
+    100% { margin-left:0px; }
+}
+
+@keyframes reveal {
+    0% {opacity:0;width:0px;}
+    20% {opacity:1;width:0px;}
+    30% {width:170px;}
+    80% {opacity:1;}
+    100% {opacity:0;width:170px;}
+}
 
 
+/* banner */
+.img-banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 130px; /* Ajusta el valor según tus necesidades */
+  overflow: hidden;
+  margin: 0px 30px;
+}
+
+.banner {
+  width: auto;
+  max-height: 90%;
+  max-width: 90%;
+  animation: bannerAnimation 3s linear infinite;
+}
+
+@keyframes bannerAnimation {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+}
