--- a/src/app/public/pages/login/login.page.scss
+++ b/src/app/public/pages/login/login.page.scss
@@ -1,16 +1,29 @@
-.logo {
-  width: 50px;
-  height: 50px;
-}
-
 .btn {
   text-align: center;
   margin-top: 15px;
+  font-size: 13pt;
+  color: rgb(255, 255, 255);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.boton{
+  margin-top: 27px;
+}
+
+ion-input{
+  width: 100%;
+  font-weight: bold;
+  font-size: 12pt;
+  color: #797979;
 }
 
 ion-card {
   --ion-background-color: transparent;
   box-shadow: none;
+  margin: auto;
+  margin-top: 40px;
+  width: 80%;
+  height: 280px;
 }
 
 ion-card-title {
@@ -26,4 +39,129 @@ ion-title {
 
 .error-message{
   color: red;
+}
+
+
+/* ojito del password */
+
+ion-item.ion-credenciales {
+  position: relative; /* Establece la posición relativa para el elemento padre */
+  z-index: 1;
+}
+
+ion-icon {
+  position: absolute; /* Establece la posición absoluta para el icono */
+  top: 50%; /* Alinea el icono verticalmente en el centro */
+  right: 10px; /* Alinea el icono a la derecha con un pequeño espacio */
+  transform: translateY(-50%); /* Ajusta la posición vertical del icono */
+  cursor: pointer; /* Cambia el cursor al pasar sobre el icono */
+  font-size: 25px;
+  z-index: 10;
+}
+
+
+/* animacion de letras MediBook */
+
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+
+.texto-animado {
+  display: flex;
+  text-align:center;
+  justify-content: center;
+  align-items: center;
+  /*background-color: #0056b3; */
+  font-weight:600;
+  font-size:32px;
+  overflow:hidden;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -webkit-transform: translate3d(0,0,0);
+}
+h1{
+  padding: 0;
+  margin: 0;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+.primero{
+  font-family: 'Righteous', cursive;;
+  color: #F39C12;
+  font-size: 25pt;
+  font-weight: bold;
+}
+
+.segundo{
+  font-family: 'Righteous', cursive;
+  color: #2ECC71;
+  font-size: 25pt;
+  font-weight: bold;
+}
+
+.primer-txt {
+  display:inline-block;
+  overflow:hidden;
+  height: 40px;
+  margin-top: 18px;
+}
+.txt{
+  padding: 0px;
+  margin: 0px;
+}
+
+.primer-txt:first-of-type {    /* For increasing performance
+                       ID/Class should've been used.
+                       For a small demo
+                       it's okaish for now */
+  animation: showup 5s infinite;
+}
+
+.primer-txt:last-of-type {
+  width:0px;
+  animation: reveal 5s infinite;
+}
+
+.primer-txt:last-of-type h1 {
+  margin-left:10px;
+  animation: slidein 5s infinite;
+}
+
+@keyframes showup {
+    0% {opacity:0;}
+    20% {opacity:1;}
+    80% {opacity:1;}
+    100% {opacity:0;}
+}
+
+@keyframes slidein {
+    0% { margin-left:-800px; }
+    20% { margin-left:-800px; }
+    35% { margin-left:0px; }
+    100% { margin-left:0px; }
+}
+
+@keyframes reveal {
+    0% {opacity:0;width:0px;}
+    20% {opacity:1;width:0px;}
+    30% {width:145px;}
+    80% {opacity:1;}
+    100% {opacity:0;width:145px;}
+}
+
+
+/* animacion img */
+ion-img{
+  animation: bannerAnimation 2s linear infinite;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+@keyframes bannerAnimation {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.03);
+  }
 }
