--- a/src/app/private/pages/profile/profile.page.scss
+++ b/src/app/private/pages/profile/profile.page.scss
@@ -1,5 +1,10 @@
 ion-card {
   border-radius: 16px;
+  padding: 15px;
+}
+
+app-card-items {
+  padding: 15px;
 }
 
 .title {
@@ -27,6 +32,7 @@ ion-card {
 h3 {
   font-weight: 20px;
   font-weight: 500;
+  font-weight: 900;
 }
 
 p {
@@ -59,4 +65,8 @@ ion-icon {
   font-size: 16px;
   font-weight: 600;
   margin-left: 8px;
+}
+
+.medico-email{
+  font-size: 15px;
 }
