--- a/src/app/private/tabs/tabs.page.html
+++ b/src/app/private/tabs/tabs.page.html
@@ -19,7 +19,7 @@
     </ion-tab-button>
     <ion-tab-button tab="profile">
       <ion-icon aria-hidden="true" name="person" ></ion-icon>
-      <ion-label>Profile</ion-label>
+      <ion-label>Perfil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
