--- a/src/app/public/pages/login/login.page.scss
+++ b/src/app/public/pages/login/login.page.scss
@@ -1,6 +1,8 @@
 .btn {
   text-align: center;
   margin-top: 15px;
+  margin-bottom: 25px;
+  height: 45px;
   font-size: 13pt;
   color: rgb(255, 255, 255);
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -101,7 +103,7 @@ h1{
 .primer-txt {
   display:inline-block;
   overflow:hidden;
-  height: 40px;
+  height: 50px;
   margin-top: 18px;
 }
 .txt{
