Header acorrdion y content del acorrdion mejorados en diseño

--- a/src/app/private/pages/profile/components/card-items-titulos/card-items-titulos.component.html
+++ b/src/app/private/pages/profile/components/card-items-titulos/card-items-titulos.component.html
@@ -1,11 +1,11 @@
 <ion-card-header>
-  <ion-accordion-group>
+  <ion-accordion-group [multiple]="false" [value]="['first']">
     <ion-accordion
       value="second"
       toggleIcon="caret-down-circle"
       toggleIconSlot="start"
     >
-      <ion-item slot="header" color="light">
+      <ion-item slot="header" color="medium">
         <div class="subtitle">
           <span> Titulos </span>
         </div>
