--- a/src/app/private/pages/profile/components/card-items-titulos/card-items-titulos.component.scss
+++ b/src/app/private/pages/profile/components/card-items-titulos/card-items-titulos.component.scss
@@ -13,3 +13,18 @@
 ion-card-header{
   margin: 20px;
 }
+
+/* Estilo para los encabezados de los acordeones */
+ion-item[slot="header"] {
+  border-radius: 20px;
+  border-bottom: 1px solid #ccc;
+  font-size: 14pt;
+  font-weight: bold;
+}
+
+/* Estilo para los encabezados de los acordeones cerrados */
+ion-accordion:not([expanded]) ion-item[slot="header"] {
+  border-bottom: none;
+}
+
+
