--- a/src/app/private/pages/profile/components/card-items/card-items.component.html
+++ b/src/app/private/pages/profile/components/card-items/card-items.component.html
@@ -1,7 +1,7 @@
 <ion-card-header>
-  <ion-accordion-group>
+  <ion-accordion-group [multiple]="false" [value]="['first']" >
     <ion-accordion value="second" toggleIcon="caret-down-circle" toggleIconSlot="start">
-      <ion-item slot="header" color="light">
+      <ion-item slot="header" color="medium">
         <div class="subtitle"> {{Nombre}} </div>
       </ion-item>
 
