--- a/src/app/private/pages/profile/profile.page.scss
+++ b/src/app/private/pages/profile/profile.page.scss
@@ -1,6 +1,7 @@
 ion-card {
   border-radius: 16px;
   padding: 15px;
+  box-shadow: none;
 }
 
 app-card-items {
@@ -24,7 +25,7 @@ app-card-items {
   display: block;
   text-align: center;
   align-items: center;
-  background: #d1cdcd;
+  background: #e5e4e4;
   border-radius: 16px;
   width: 100%;
 }
@@ -52,6 +53,7 @@ p {
   display: flex;
   align-items: center;
   padding-top: 10px;
+  padding-left: 25px;
   padding-bottom: 10px;
 }
 
@@ -79,3 +81,19 @@ ion-button{
   font-size: 15px;
 }
 
+/* Estilo para los encabezados de los acordeones */
+ion-item[slot="header"] {
+  border-radius: 20px;
+  border-bottom: 1px solid #ccc;
+  font-size: 14pt;
+  font-weight: bold;
+}
+
+/* Estilo para los encabezados de los acordeones cerrados */
+ion-accordion:not([expanded]) ion-item[slot="header"] {
+  border-bottom: none;
+}
+
+ion-accordion-group{
+  margin-top: -20px;
+}
